# UNI-CC232

./: AGENTS.md  README.md
activities/: activity1_week1.md  activity2_week2.md  activity_1.md
assignments/: .gitignore  CMakeLists.txt  aligned_buffer.h.gcov  alloc_traits.h.gcov  allocator.h.gcov  coverage_report.txt  functional_hash.h.gcov  gmon.out  hashtable.h.gcov  hashtable_policy.h.gcov  initializer_list.gcov  move.h.gcov  new.gcov  new_allocator.h.gcov  profiling_report.txt  ptr_traits.h.gcov  reporte_profiling.txt  stl_algobase.h.gcov  stl_function.h.gcov  stl_iterator.h.gcov  stl_uninitialized.h.gcov  stl_vector.h.gcov  tuple.gcov  two_sum.cc.gcov  unordered_map.h.gcov
assignments/assignment_1/: CMakeLists.txt  README.md
assignments/assignment_1/bench/: two_sum_bench.cc
assignments/assignment_1/include/: two_sum.hh
assignments/assignment_1/reports/: coverage_report.md  coverage_report.txt  optimization_report.md  profiling_dashboard.html  profiling_report.md  readmeprof.md
assignments/assignment_1/src/: two_sum.cc
assignments/assignment_1/tests/: two_sum_basic_test.cc  two_sum_dup_values_test.cc  two_sum_find_later_test.cc  two_sum_naive_basic_test.cc  two_sum_naive_diff_indices_test.cc  two_sum_naive_dup_values_test.cc  two_sum_naive_no_solution_test.cc  two_sum_no_solution_test.cc
assignments/build_cov/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
assignments/build_cov/Testing/Temporary/: CTestCostData.txt
assignments/build_cov/assignment_1/: CTestTestfile.cmake  cmake_install.cmake
assignments/build_prof/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
assignments/build_prof/assignment_1/: CTestTestfile.cmake  cmake_install.cmake
assignments/common/include/: test.hh
