cmake_minimum_required(VERSION 3.20)

project(assignments LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

enable_testing()

add_subdirectory(assignment_1)
# add_subdirectory(assignment_2)
# add_subdirectory(assignment_3)
# add_subdirectory(assignment_4)
# add_subdirectory(assignment_5)

